Working on upcomming events section

--- a/index.html
+++ b/index.html
@@ -147,9 +147,25 @@
   		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur a voluptas quam, in incidunt inventore aperiam explicabo beatae nam earum fuga, veniam dignissimos repellat voluptatem sapiente. Animi inventore aspernatur blanditiis.</p>
   		<p class="text-muted">- Jer. 4:16</p>
   	</div>
+  	<br>
   
   	
+  
   </section>
+  <div class="row m-5">
+  			<h3 class="text-center col-12">Upcoming Events</h3>
+  	</div>
+
+
+<div class="row bg-light">
+	 <section class="container d-flex justify-content-between ">
+	
+	hello
+
+ </section>	
+</div>
+
+
 
 
     <script src="js/jquery-2.1.4.min.js"></script>
