--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
   </div>
 
 
-  <section class="container d-flex justify-content-between">
+  <section class="container d-flex justify-content-center ">
   	
   		<div class="col-lg-7  ">
-  			<div class="row">
-  				<div class="col-md-4 col-sm-8"><img src="https://via.placeholder.com/190x220.png" alt="img" class=""></div>
-  				<div class="col-md-6 col-sm-4">
+  			<div class="row text-sm-center">
+  				<div class="col-md-4 col-sm-12 pl-0 mb-3"><img src="https://via.placeholder.com/200x220.png" alt="img" class=""></div>
+  				<div class="col-md-6 col-sm-12">
   					<h3>Welcome</h3>
   					<p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, nesciunt rem nostrum eligendi magnam impedit tenetur sed, obcaecati optio temporibus voluptas soluta dicta ducimus ipsum quae minima pariatur.</p>
   					<p class="text-muted">- Rev. Arhin</p>
@@ -152,18 +152,48 @@
   	
   
   </section>
-  <div class="row m-5">
-  			<h3 class="text-center col-12">Upcoming Events</h3>
+  <div class="row mt-5 mb-4 ">
+  			<h2 class="text-center col-12">Upcoming Events</h2>
   	</div>
 
+<div class="bg-light">
+	<section class="container d-flex justify-content-center ">
+  	<div class="col-12 m-5 text-sm-center text-md-left">
+  			<div class="row">
+  				<div class="col-md-4 col-sm-12 pl-0 mb-3"><img src="https://via.placeholder.com/350x220.png" alt="img" class=""></div>
+  				<div class="col-md-8 col-sm-12 pl-0 " style="padding-left: 30px !important">
+  					<h4>Community Evangelism</h4>
+  					<p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, nesciunt rem nostrum eligendi magnam impedit tenetur sed, obcaecati optio temporibus voluptas soluta dicta ducimus ipsum quae minima pariatur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis autem laboriosam quam recusandae dolor laborum, beatae nemo iste a non labore aperiam at dolore, dolorem facere quisquam illo earum sequi. </p>
+  					<button class="btn btn-primary">View All Events</button>
+  				</div>
+  			</div>
+<hr>
+  	</div>
 
-<div class="row bg-light">
+</section>
+
+</div>
+ 
+<!-- <section class=" bg-light py-5">
+	<div class="co-7">
+		<div class="row  container justify-content-md-center">
+		<div class="col-3 ">
+			<img src="https://via.placeholder.com/200x220.png" alt="img" class="">
+		</div>
+		<div class="col-7">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab et totam, possimus quam obcaecati qui ipsam, eligendi tenetur vitae vero, nisi quis officia voluptates! Earum soluta suscipit cupiditate, quos velit.
+		</div>
+	</div>
+	</div>
+	
+</section> -->
+<!-- <div class="row bg-light">
 	 <section class="container d-flex justify-content-between ">
 	
-	hello
+	
 
  </section>	
-</div>
+</div> -->
 
 
 
