Upcomming events updated

--- a/index.html
+++ b/index.html
@@ -129,18 +129,18 @@
 
   <section class="container d-flex justify-content-center ">
   	
-  		<div class="col-lg-7  ">
-  			<div class="row text-sm-center">
-  				<div class="col-md-4 col-sm-12 pl-0 mb-3"><img src="https://via.placeholder.com/200x220.png" alt="img" class=""></div>
-  				<div class="col-md-6 col-sm-12">
+  		<div class="col-lg-9  ">
+  			<div class="row text-sm-center text-md-left">
+  				<div class="col-md-5 col-sm-12 pl-0 mb-3"><img src="https://via.placeholder.com/320x220.png" alt="img" class=""></div>
+  				<div class="col-md-7 col-sm-12">
   					<h3>Welcome</h3>
-  					<p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, nesciunt rem nostrum eligendi magnam impedit tenetur sed, obcaecati optio temporibus voluptas soluta dicta ducimus ipsum quae minima pariatur.</p>
+  					<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, nesciunt rem nostrum eligendi magnam impedit tenetur sed, obcaecati optio temporibus voluptas soluta dicta ducimus ipsum quae minima pariatur.</p>
   					<p class="text-muted">- Rev. Arhin</p>
   				</div>
   			</div>
   		</div>
-  	<div class="col-lg-5   d-none d-lg-block verse" >
-  		<div style="background-color: #303181;margin: 0px -15px 0px -15px; opacity: 0.7; color: #fff; text-align: center"> <p class="lead ">Next Service begins at <b>08:00 GMT</b></p> </div>
+  	<div class="col-lg-3   d-none d-lg-block verse" >
+  		<div style="background-color: #303181;margin: 0px -15px 0px -15px; opacity: 0.7; color: #fff; text-align: center"> <p class="">Next Service begins at <b>08:00 GMT</b></p> </div>
   
   		<p style="font-size: 80px; font-family: Ariel; float-right; text-align:right;">”</p>
   		<h4 style="margin-top:-40px">Verse of the week</h4>
@@ -160,40 +160,48 @@
 	<section class="container d-flex justify-content-center ">
   	<div class="col-12 m-5 text-sm-center text-md-left">
   			<div class="row">
-  				<div class="col-md-4 col-sm-12 pl-0 mb-3"><img src="https://via.placeholder.com/350x220.png" alt="img" class=""></div>
-  				<div class="col-md-8 col-sm-12 pl-0 " style="padding-left: 30px !important">
+  				<div class="col-md-4 col-sm-12 pl-0 mb-3"><img src="https://via.placeholder.com/330x220.png" alt="img" class=""></div>
+  				<div class="col-md-8 col-sm-12 pl-0 " style="padding-left: 0px !important">
   					<h4>Community Evangelism</h4>
   					<p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, nesciunt rem nostrum eligendi magnam impedit tenetur sed, obcaecati optio temporibus voluptas soluta dicta ducimus ipsum quae minima pariatur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis autem laboriosam quam recusandae dolor laborum, beatae nemo iste a non labore aperiam at dolore, dolorem facere quisquam illo earum sequi. </p>
   					<button class="btn btn-primary">View All Events</button>
   				</div>
   			</div>
 <hr>
+
+<div class="row mt-5">
+	<div class="col-md-6 col-sm-12 mb-5">
+		<div class="row">
+			<div class="col-md-2 col-sm-4 text-center date">
+				<span style="font-size: 15px">1st - 21st</span><br>
+				<span style="font-size: 35px">JUN</span>
+			</div>
+			<div class="col-md-10 col-sm-8">
+				<h4>6th Month Favorable Visitation</h4>
+				<p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos corporis, ad maiores soluta voluptates illum vero qui reprehenderit.</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-6 col-sm-12 =">
+		<div class="row">
+			<div class="col-md-2 col-sm-4 text-center date">
+				<span style="font-size: 15px">1st - 21st</span><br>
+				<span style="font-size: 35px">AUG</span>
+			</div>
+			<div class="col-md-10 col-sm-8">
+				<h4>Traditional Service</h4>
+				<p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos corporis, ad maiores soluta voluptates illum vero qui reprehenderit.</p>
+			</div>
+		</div>
+	</div>
+</div>
   	</div>
 
 </section>
 
 </div>
  
-<!-- <section class=" bg-light py-5">
-	<div class="co-7">
-		<div class="row  container justify-content-md-center">
-		<div class="col-3 ">
-			<img src="https://via.placeholder.com/200x220.png" alt="img" class="">
-		</div>
-		<div class="col-7">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab et totam, possimus quam obcaecati qui ipsam, eligendi tenetur vitae vero, nisi quis officia voluptates! Earum soluta suscipit cupiditate, quos velit.
-		</div>
-	</div>
-	</div>
-	
-</section> -->
-<!-- <div class="row bg-light">
-	 <section class="container d-flex justify-content-between ">
-	
-	
 
- </section>	
-</div> -->
 
 
 
