--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	  <link rel="stylesheet" href="css/ionicons.min.css">
 	  <link rel="stylesheet" href="css/icons.css">
 	   <link rel="stylesheet" href="css/style.css">
+	   <link rel="stylesheet" href="css/mobile_style.css">
 
 	  
 	  
@@ -164,7 +165,7 @@
   				<div class="col-md-8 col-sm-12 pl-0 " style="padding-left: 0px !important">
   					<h4>Community Evangelism</h4>
   					<p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, nesciunt rem nostrum eligendi magnam impedit tenetur sed, obcaecati optio temporibus voluptas soluta dicta ducimus ipsum quae minima pariatur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis autem laboriosam quam recusandae dolor laborum, beatae nemo iste a non labore aperiam at dolore, dolorem facere quisquam illo earum sequi. </p>
-  					<button class="btn btn-primary">View All Events</button>
+  					<button class="btn btn-primary text-xs-center">View All Events</button>
   				</div>
   			</div>
 <hr>
@@ -202,7 +203,131 @@
 </div>
  
 
+<div class="primary">
+	<section class="container d-flex justify-content-center  py-5">
+			<div class="row">
+				<div class="col-md-5">
+				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+	  <div class="carousel-inner">
+	    <div class="carousel-item active">
+	      <img class="d-block w-100" src="https://via.placeholder.com/380x220.png" alt="First slide">
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block w-100" src="https://via.placeholder.com/380x220.png" alt="Second slide">
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block w-100" src="https://via.placeholder.com/380x220.png" alt="Third slide">
+	    </div>
+	  </div>
+	  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	    <span class="sr-only">Previous</span>
+	  </a>
+	  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	    <span class="sr-only">Next</span>
+	  </a>
+	</div>
+				</div>
+				<div class="col-md-7">
+					<h4>Weekly Programs</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus voluptatibus laborum dolores corrupti, doloremque in iure.</p>
+					<div class="row ml-1 mb-3">
+						<div class="col-md-5 col-sm-5  mr-4 week">
+							<h3 >Mon</h3>
+							<span>Youth Meeting</span> <br>
+							<span>06:30PM - 08:30PM </span>
+						</div>
 
+						<div class="col-md-5 col-sm-5  week">
+							<h3 >Tue</h3>
+							<span>Youth Meeting</span> <br>
+							<span>06:30PM - 08:30PM </span>
+						</div>
+					</div>
+
+						<div class="row ml-1 mb-3">
+						<div class="col-md-5 col-sm-4 col-sm-5   mr-4  week">
+							<h3 >Mon</h3>
+							<span>Youth Meeting</span> <br>
+							<span>06:30PM - 08:30PM </span>
+						</div>
+
+						<div class="col-md-5 col-sm-4 col-sm-5   week">
+							<h3 >Tue</h3>
+							<span>Youth Meeting</span> <br>
+							<span>06:30PM - 08:30PM </span>
+						</div>
+					</div>
+
+
+						<div class="row ml-1">
+						<div class="col-md-5 col-sm-4 col-sm-5   mr-4 week">
+							<h3 >Mon</h3>
+							<span>Youth Meeting</span> <br>
+							<span>06:30PM - 08:30PM </span>
+						</div>
+
+						<div class="col-md-5 col-sm-4 col-sm-5   week">
+							<h3 >Tue</h3>
+							<span>Youth Meeting</span> <br>
+							<span>06:30PM - 08:30PM </span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+</div>	
+
+<div class="bg-light">
+	<section class="container d-flex justify-content-center ">
+		<div class="col-md-6  col-sm-12 m-5 text-center ">
+
+			<h3>Stay Connected With Us</h3>
+			<p class="lead"> To stay up to date on everything happening at House of Hope A/G, subscribe to our weekly newsletter</p>
+			<input type="text" placeholder="your email here" class="form-control">
+			<button class="btn btn-primary mt-4 px-5"> SIGNUP </button>
+		
+		</div>
+	</section>
+</div>	
+
+
+<div class="bg-secondary">
+	<section class="container d-flex justify-content-center  py-5">
+
+		<div class="col-md-3 col-sm-6">	
+			<h3> Address</h3>
+			<p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat quo non repellat maiores! Molestias cumque magni tempore odit doloremque dolor .</p>
+			<p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+		</div>
+		<div class="col-md-3 col-sm-6">
+			<h3> Facebook</h3>
+			<img src="https://via.placeholder.com/250x220.png" alt="img" class="mt-3">
+
+		</div>
+
+		<div class="col-md-3">
+			<h3> Twitter</h3>
+			<img src="https://via.placeholder.com/250x220.png" alt="img" class="mt-3">
+
+		</div>
+		<div class="col-md-3">
+			<h3> Quick Links</h3>
+			<ul>	
+				<li><a href="#">Prayer Request</a></li>
+				<li><a href="#">Contact Us</a></li>
+				<li><a href="#">Events</a></li>
+				<li><a href="#">Sermons</a></li>
+				<li><a href="#">Ministries</a></li>
+				<li><a href="#">Our Pastors</a></li>
+				<li><a href="#">About Us</a></li>
+			</ul>
+		</div>
+	
+	</section>
+</div>	
 
 
 
