--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-md-6 col-sm-12 =">
+	<div class="col-md-6 col-sm-12 ">
 		<div class="row">
 			<div class="col-md-2 col-sm-4 text-center date">
 				<span style="font-size: 15px">1st - 21st</span><br>
@@ -233,7 +233,7 @@
 					<h4>Weekly Programs</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus voluptatibus laborum dolores corrupti, doloremque in iure.</p>
 					<div class="row ml-1 mb-3">
-						<div class="col-md-5 col-sm-5  mr-4 week">
+						<div class="col-md-5 col-sm-5   week">
 							<h3 >Mon</h3>
 							<span>Youth Meeting</span> <br>
 							<span>06:30PM - 08:30PM </span>
@@ -247,13 +247,13 @@
 					</div>
 
 						<div class="row ml-1 mb-3">
-						<div class="col-md-5 col-sm-4 col-sm-5   mr-4  week">
+						<div class="col-md-5  col-sm-5    week">
 							<h3 >Mon</h3>
 							<span>Youth Meeting</span> <br>
 							<span>06:30PM - 08:30PM </span>
 						</div>
 
-						<div class="col-md-5 col-sm-4 col-sm-5   week">
+						<div class="col-md-5  col-sm-5   week">
 							<h3 >Tue</h3>
 							<span>Youth Meeting</span> <br>
 							<span>06:30PM - 08:30PM </span>
@@ -262,13 +262,13 @@
 
 
 						<div class="row ml-1">
-						<div class="col-md-5 col-sm-4 col-sm-5   mr-4 week">
+						<div class="col-md-5  col-sm-5    week">
 							<h3 >Mon</h3>
 							<span>Youth Meeting</span> <br>
 							<span>06:30PM - 08:30PM </span>
 						</div>
 
-						<div class="col-md-5 col-sm-4 col-sm-5   week">
+						<div class="col-md-5 col-sm-5   week">
 							<h3 >Tue</h3>
 							<span>Youth Meeting</span> <br>
 							<span>06:30PM - 08:30PM </span>
@@ -297,25 +297,26 @@
 <div class="bg-secondary">
 	<section class="container d-flex justify-content-center  py-5">
 
-		<div class="col-md-3 col-sm-6">	
+<div class="row">
+	<div class="col-md-3  col-sm-12 mb-4">	
 			<h3> Address</h3>
 			<p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat quo non repellat maiores! Molestias cumque magni tempore odit doloremque dolor .</p>
 			<p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
 		</div>
-		<div class="col-md-3 col-sm-6">
+		<div class="col-md-3 col-sm-12  mb-4">
 			<h3> Facebook</h3>
 			<img src="https://via.placeholder.com/250x220.png" alt="img" class="mt-3">
 
 		</div>
 
-		<div class="col-md-3">
+		<div class="col-md-3  col-sm-12 mb-4">
 			<h3> Twitter</h3>
 			<img src="https://via.placeholder.com/250x220.png" alt="img" class="mt-3">
 
 		</div>
-		<div class="col-md-3">
+		<div class="col-md-2 col-sm-12 mb-4">
 			<h3> Quick Links</h3>
-			<ul>	
+			<ul  class="quick_links">	
 				<li><a href="#">Prayer Request</a></li>
 				<li><a href="#">Contact Us</a></li>
 				<li><a href="#">Events</a></li>
@@ -325,8 +326,18 @@
 				<li><a href="#">About Us</a></li>
 			</ul>
 		</div>
+</div>
+
+		
 	
 	</section>
+
+	<footer>
+		<p class="text-center">&copy;2019 Hope Media</p>
+	</footer>
+
+	
+		
 </div>	
 
 
@@ -335,27 +346,6 @@
 	  <script src="js/bootstrap.min.js"></script>
     <script src="js/carousel.js"></script>
 	  
-	  
-	  
-	
-	  
-<!-- 	  
-    <script>
-      $(function() {
-        var t0, t1;
-
-        // Test to show that the carousel doesn't slide when the current tab isn't visible
-        // Test to show that transition-duration can be changed with css
-        $('#carousel-example-generic').on('slid.bs.carousel', function(event) {
-          t1 = performance.now()
-          console.log('transition-duration took' + (t1 - t0) + 'ms, slid at ', event.timeStamp)
-        }).on('slide.bs.carousel', function() {
-          t0 = performance.now()
-        })
-      })
-    </script>
-	  
- -->
 
 
   </body>
