--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 	  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,700,800&display=swap" rel="stylesheet">
 	  
 	  <link rel="stylesheet" href="css/bootstrap.min.css">
+	  
 	  <link rel="stylesheet" href="css/carousel.css">
 	  <link rel="stylesheet" href="css/typicons.css">
 	  <link rel="stylesheet" href="css/ionicons.min.css">
 	  <link rel="stylesheet" href="css/icons.css">
 	   <link rel="stylesheet" href="css/style.css">
 	   <link rel="stylesheet" href="css/mobile_style.css">
+	   <link href="css/animate.min.css" rel="stylesheet">
+    <link href="css/bootstrap-dropdownhover.min.css" rel="stylesheet">
 
 	  
 	  
@@ -64,7 +67,47 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active"><a class="nav-link" href="home">Home</a></li>
-		<li class="nav-item"><a class="nav-link" href="shop">About Us</a></li>
+
+
+
+         <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" data-hover="dropdown" aria-haspopup="true" aria-expanded="false">
+          About US
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">History</a>
+          <a class="dropdown-item" href="#">Mission</a>
+          <a class="dropdown-item" href="#">Our Pastors</a>
+        </div>
+      </li>
+
+
+   <div class="dropdown">
+  <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" data-hover="dropdown">
+   Dropdown <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu">
+    <li><a href="#">Action</a></li>
+    <li><a href="#">Another action</a></li>
+    <li class="dropdown">
+      <a href="#">One more dropdown</a>
+      <ul class="dropdown-menu">
+        <li><a href="#">Action</a></li>
+        <li><a href="#">Another action</a></li>
+        <li class="dropdown">
+          <a href="#">One more dropdown</a>
+          <ul class="dropdown-menu">
+          ...
+          </ul>
+        </li>
+        <li><a href="#">Something else here</a></li>
+        <li><a href="#">Separated link</a></li>
+       </ul>
+    </li>
+    <li><a href="#">Something else here</a></li>
+    <li><a href="#">Separated link</a></li>
+  </ul>
+</div>
 
 <li class="nav-item"><a class="nav-link" href="frames">Events</a></li>
         <li class="nav-item"><a class="nav-link" href="branches">Ministries</a></li>
@@ -343,8 +386,11 @@
 
 
     <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	  <script src="js/bootstrap.min.js"></script>
-    <script src="js/carousel.js"></script>
+   
+     <script src="js/bootstrap-dropdownhover.min.js"></script>
+      <script src="js/carousel.js"></script>
 	  
 
 
