Styles updated for site

--- a/live.html
+++ b/live.html
@@ -35,7 +35,7 @@
   <body>
 
 <header class="fixed-top ">
-	<section class="topper clearfix bg-dark ">
+	<section class="topper clearfix primary ">
 		<div class="container">
 			<div class="row justify-content-end pt-3">
 			
@@ -45,7 +45,7 @@
 
 			  		<li>  <a href="#" target="_blank" class="top-icon"><i class="fa fa-youtube-play"></i></a> </li>
 
-			  		<li><a href="live.html" target="_blank" class="btn btn-danger btn-sm">Watch Live Service</a></li>
+			  		<li><a href="#" target="_blank" class="btn btn-danger btn-sm">Watch Live Service</a></li>
 			  	</ul>
 				  
 				 
@@ -82,7 +82,6 @@
       </li>
 
 
- 
 
 <li class="nav-item"><a class="nav-link" href="frames">Events</a></li>
         <li class="nav-item"><a class="nav-link" href="branches">Ministries</a></li>
