--- a/live.html
+++ b/live.html
@@ -98,126 +98,17 @@
 
 
 
- <div id="myCarousel" class="carousel slide mt-3" data-ride="carousel">
-    <ol class="carousel-indicators ">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img alt="slide 1" src="images/__s1.jpg"  height="600px" width="1920" />
-        <div class="container">
-          <div class="carousel-caption text-left">
-            <h1>Frames that speak <br>to the soul</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-       <img alt="slide 1" src="images/_s1.jpg"  height="600px" width="1920" />
-        <div class="container">
-          <div class="carousel-caption text-left">
-            <h1>Another example headline.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-       <img alt="slide 1" src="images/three.jpg" class="img-fluid" />
-        <div class="container">
-          <div class="carousel-caption text-left">
-            <h1>One more for good measure.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-     <img alt="slide 1" src="images/left.png" class="img-fluid" />
-    </a>
-    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-     <img alt="slide 1" src="images/right.png" class="img-fluid" />
-    </a>
-  </div>
-
-
-  <section class="container d-flex justify-content-center ">
-  	
-  		<div class="col-lg-9  ">
-  			<div class="row text-sm-center text-md-left">
-  				<div class="col-md-5 col-sm-12 pl-0 mb-3"><img src="https://via.placeholder.com/320x220.png" alt="img" class=""></div>
-  				<div class="col-md-7 col-sm-12">
-  					<h3>Welcome</h3>
-  					<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, nesciunt rem nostrum eligendi magnam impedit tenetur sed, obcaecati optio temporibus voluptas soluta dicta ducimus ipsum quae minima pariatur.</p>
-  					<p class="text-muted">- Rev. Arhin</p>
-  				</div>
-  			</div>
-  		</div>
-  	<div class="col-lg-3   d-none d-lg-block verse" >
-  		<div style="background-color: #303181;margin: 0px -15px 0px -15px; opacity: 0.7; color: #fff; text-align: center"> <p class="">Next Service begins at <b>08:00 GMT</b></p> </div>
-  
-  		<p style="font-size: 80px; font-family: Ariel; float-right; text-align:right;">”</p>
-  		<h4 style="margin-top:-40px">Verse of the week</h4>
-  		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur a voluptas quam, in incidunt inventore aperiam explicabo beatae nam earum fuga, veniam dignissimos repellat voluptatem sapiente. Animi inventore aspernatur blanditiis.</p>
-  		<p class="text-muted">- Jer. 4:16</p>
-  	</div>
-  	<br>
-  
-  	
-  
-  </section>
-  <div class="row mt-5 mb-4 ">
-  			<h2 class="text-center col-12">Upcoming Events</h2>
-  	</div>
-
-<div class="bg-light">
-	<section class="container d-flex justify-content-center ">
-  	<div class="col-12 m-5 text-sm-center text-md-left">
-  			<div class="row">
-  				<div class="col-md-4 col-sm-12 pl-0 mb-3"><img src="https://via.placeholder.com/330x220.png" alt="img" class=""></div>
-  				<div class="col-md-8 col-sm-12 pl-0 " style="padding-left: 0px !important">
-  					<h4>Community Evangelism</h4>
-  					<p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, nesciunt rem nostrum eligendi magnam impedit tenetur sed, obcaecati optio temporibus voluptas soluta dicta ducimus ipsum quae minima pariatur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis autem laboriosam quam recusandae dolor laborum, beatae nemo iste a non labore aperiam at dolore, dolorem facere quisquam illo earum sequi. </p>
-  					<button class="btn btn-primary text-xs-center">View All Events</button>
-  				</div>
-  			</div>
-<hr>
-
-<div class="row mt-5">
-	<div class="col-md-6 col-sm-12 mb-5">
-		<div class="row">
-			<div class="col-md-2 col-sm-4 text-center date">
-				<span style="font-size: 15px">1st - 21st</span><br>
-				<span style="font-size: 35px">JUN</span>
-			</div>
-			<div class="col-md-10 col-sm-8">
-				<h4>6th Month Favorable Visitation</h4>
-				<p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos corporis, ad maiores soluta voluptates illum vero qui reprehenderit.</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-md-6 col-sm-12 ">
-		<div class="row">
-			<div class="col-md-2 col-sm-4 text-center date">
-				<span style="font-size: 15px">1st - 21st</span><br>
-				<span style="font-size: 35px">AUG</span>
-			</div>
-			<div class="col-md-10 col-sm-8">
-				<h4>Traditional Service</h4>
-				<p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos corporis, ad maiores soluta voluptates illum vero qui reprehenderit.</p>
-			</div>
-		</div>
-	</div>
-</div>
-  	</div>
-
+<section class="container primary ">
+	<h3>Live Stream</h3>
+	<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing</p>
+	
 </section>
 
-</div>
+
+
+
+
+
  
 
 <div class="primary">
