Live section completed

--- a/live.html
+++ b/live.html
@@ -98,13 +98,30 @@
 
 
 
-<section class="container primary ">
-	<h3>Live Stream</h3>
+<section class=" primary banner mb-5">
+	<div class="container">
+		<h3>Live Stream</h3>
 	<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing</p>
+	
+	</div>
 	
 </section>
 
 
+<section class="container d-flex justify-content-center  py-5">
+
+
+	<div class="col-md-6 col-sm-12 text-center">
+		<iframe class="live" src="https://www.youtube.com/embed/JGMKdwvLPIE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<button class="btn btn-primary mt-3 ">Give Online</button>
+</div>
+
+
+
+
+
+	
+</section>
 
 
 
