desktop styles for about completed

--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
 
 
 
-<section class=" primary banner mb-5">
+<section class=" primary banner mb-5 text-sm-center">
 	<div class="container">
 		<h3>About Us</h3>
 	<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing</p>
@@ -111,25 +111,37 @@
 <section class="container   py-5">
 
 
-		<div class="row mb-3">
-			<div class="col-5">
-				<img src="https://via.placeholder.com/420x220.png" alt="img" class="">
+		<div class="row mb-5">
+			<div class="col-md-5 col-sm-12 mb-3">
+				<img src="https://via.placeholder.com/420x220.png" alt="img" class="img-fluid">
 			</div>
 			
-			<div class="col-7">
+			<div class="col-md-7 col-sm-12">
+				<h3>History</h3>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi eveniet iste ut quibusdam aliquam, dicta velit nihil dolores nesciunt aperiam consectetur delectus voluptatibus, enim, deserunt. Tempore excepturi praesentium, autem nam.
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore architecto delectus dolor quos porro ad consequuntur sit itaque recusandae accusamus, fugit facere enim neque aspernatur necessitatibus commodi perferendis consequatur aut. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi possimus labore error enim omnis fuga voluptatum quae laborum totam nam dolorum beatae eius harum dolorem, rerum magnam earum qui nihil.
 			</div>
 		</div>	
 
-		<div class="row">
+		<div class="row mb-5">
 			<div class="col-12">
 				
-			<img src="https://via.placeholder.com/920x220.png" alt="img" class="">
+			<img src="https://via.placeholder.com/1120x220.png" alt="img" class="img-fluid">
 			</div>
 		</div>
 	
+	
+	<div class="row">
+		<div class="col-md-6 col-sm-12">
+			<h3>Mission</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, excepturi. Doloremque beatae, quae non necessitatibus esse rem nostrum eligendi facilis voluptatem! Minima sunt maxime voluptas rerum soluta obcaecati praesentium esse.</p>
+		</div>
 
+		<div class="col-md-6 col-sm-12">
+			<h3>Mission</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, excepturi. Doloremque beatae, quae non necessitatibus esse rem nostrum eligendi facilis voluptatem! Minima sunt maxime voluptas rerum soluta obcaecati praesentium esse.</p>
+		</div>
+	</div>
 
 
 
@@ -138,6 +150,23 @@
 	
 </section>
 
+
+
+<section class=" py-5 bg-light">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4 col-sm-12 mb-3">
+				<img src="https://via.placeholder.com/350x220.png" alt="img" class="img-fluid">
+			</div>
+			<div class="col-md-8 col-sm-12">
+				<h3>What we believe in</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, officiis. Voluptatum ullam voluptates dolorum officiis amet reprehenderit, rem doloremque incidunt repellat, saepe, asperiores id. Distinctio accusamus officia suscipit quas optio.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, officiis. Voluptatum ullam voluptates dolorum officiis amet reprehenderit, rem doloremque incidunt repellat, saepe, asperiores id. Distinctio accusamus officia suscipit quas optio.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, officiis. Voluptatum ullam voluptates dolorum officiis amet reprehenderit, rem doloremque incidunt.</p>
+			</div>
+		</div>
+	</div>
+</section>
 
 
 
