--- a/events.html
+++ b/events.html
@@ -75,7 +75,7 @@
           About US
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">History</a>
+          <a class="dropdown-item" href="#">Community Evangelism</a>
           <a class="dropdown-item" href="#">Mission</a>
           <a class="dropdown-item" href="#">Our Pastors</a>
         </div>
@@ -98,9 +98,9 @@
 
 
 
-<section class=" primary banner mb-5  ">
+<section class=" primary banner mb-5 ">
 	<div class="container">
-		<h3>About Us</h3>
+		<h3>Events Us</h3>
 	<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing</p>
 	
 	</div>
@@ -112,36 +112,61 @@
 
 
 		<div class="row mb-5">
-			<div class="col-md-5 col-sm-12 mb-3">
-				<img src="https://via.placeholder.com/420x220.png" alt="img" class="img-fluid">
+			<div class="col-md-3 col-sm-12 my-3">
+				<img src="https://via.placeholder.com/260x220.png" alt="img" class="img-fluid">
 			</div>
 			
-			<div class="col-md-7 col-sm-12">
-				<h3>History</h3>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi eveniet iste ut quibusdam aliquam, dicta velit nihil dolores nesciunt aperiam consectetur delectus voluptatibus, enim, deserunt. Tempore excepturi praesentium, autem nam.
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore architecto delectus dolor quos porro ad consequuntur sit itaque recusandae accusamus, fugit facere enim neque aspernatur necessitatibus commodi perferendis consequatur aut. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi possimus labore error enim omnis fuga voluptatum quae laborum totam nam dolorum beatae eius harum dolorem, rerum magnam earum qui nihil.
+			<div class="col-md-7 col-sm-12  my-3">
+				<h4 class="primary-text" >Community Evangelism</h4>
+				<p class="primary-text lead">1st - 31st March, 08:30am</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi eveniet iste ut quibusdam aliquam, dicta velit nihil dolores nesciunt aperiam consectetur delectus voluptatibus, enim, deserunt. Tempore excepturi praesentium, autem nam.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 			</div>
 		</div>	
+		<hr>
 
-		<div class="row mb-5">
-			<div class="col-12">
-				
-			<img src="https://via.placeholder.com/1120x220.png" alt="img" class="img-fluid">
+			<div class="row mb-5 bg-light">
+			<div class="col-md-3 col-sm-12  my-3">
+				<img src="https://via.placeholder.com/260x220.png" alt="img" class="img-fluid">
 			</div>
-		</div>
-	
-	
-	<div class="row">
-		<div class="col-md-6 col-sm-12">
-			<h3>Mission</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, excepturi. Doloremque beatae, quae non necessitatibus esse rem nostrum eligendi facilis voluptatem! Minima sunt maxime voluptas rerum soluta obcaecati praesentium esse.</p>
-		</div>
+			
+			<div class="col-md-7 col-sm-12 my-3">
+				<h4 class="primary-text" >Community Evangelism</h4>
+				<p class="primary-text lead">1st - 31st March, 08:30am</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi eveniet iste ut quibusdam aliquam, dicta velit nihil dolores nesciunt aperiam consectetur delectus voluptatibus, enim, deserunt. Tempore excepturi praesentium, autem nam.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+			</div>
+		</div>	
+		<hr>
 
-		<div class="col-md-6 col-sm-12">
-			<h3>Mission</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, excepturi. Doloremque beatae, quae non necessitatibus esse rem nostrum eligendi facilis voluptatem! Minima sunt maxime voluptas rerum soluta obcaecati praesentium esse.</p>
-		</div>
-	</div>
+
+			<div class="row mb-5">
+			<div class="col-md-3 col-sm-12 my-3">
+				<img src="https://via.placeholder.com/260x220.png" alt="img" class="img-fluid">
+			</div>
+			
+			<div class="col-md-7 col-sm-12 my-3">
+				<h4 class="primary-text" >Community Evangelism</h4>
+				<p class="primary-text lead">1st - 31st March, 08:30am</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi eveniet iste ut quibusdam aliquam, dicta velit nihil dolores nesciunt aperiam consectetur delectus voluptatibus, enim, deserunt. Tempore excepturi praesentium, autem nam.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+			</div>
+		</div>	
+		<hr>
+
+			<div class="row mb-5 bg-light ">
+			<div class="col-md-3 col-sm-12 my-3">
+				<img src="https://via.placeholder.com/260x220.png" alt="img" class="img-fluid">
+			</div>
+			
+			<div class="col-md-7 col-sm-12 my-3">
+				<h4 class="primary-text" >Community Evangelism</h4>
+				<p class="primary-text lead">1st - 31st March, 08:30am</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi eveniet iste ut quibusdam aliquam, dicta velit nihil dolores nesciunt aperiam consectetur delectus voluptatibus, enim, deserunt. Tempore excepturi praesentium, autem nam.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+			</div>
+		</div>	
+		<hr>
 
 
 
@@ -151,22 +176,6 @@
 </section>
 
 
-
-<section class=" py-5 bg-light">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-4 col-sm-12 mb-3">
-				<img src="https://via.placeholder.com/350x220.png" alt="img" class="img-fluid">
-			</div>
-			<div class="col-md-8 col-sm-12">
-				<h3>What we believe in</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, officiis. Voluptatum ullam voluptates dolorum officiis amet reprehenderit, rem doloremque incidunt repellat, saepe, asperiores id. Distinctio accusamus officia suscipit quas optio.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, officiis. Voluptatum ullam voluptates dolorum officiis amet reprehenderit, rem doloremque incidunt repellat, saepe, asperiores id. Distinctio accusamus officia suscipit quas optio.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, officiis. Voluptatum ullam voluptates dolorum officiis amet reprehenderit, rem doloremque incidunt.</p>
-			</div>
-		</div>
-	</div>
-</section>
 
 
 
